# ipam

./: .gitignore  README.md  docker-compose.yml  package-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  crud.py  database.py  discovery.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  start.sh
backend/migrations/: env.py
backend/migrations/versions/: 1149fb28cad6_add_discovered_status.py  1309abae83d4_make_datetimes_timezone_aware.py  6f660a2cfa9d_initial_migration.py  7219b758cb71_add_hostname_to_ipaddress.py  8328e3bfc356_add_settings_table.py  8fa34a591b89_add_scan_metadata_to_subnets.py  eb214b7e8832_add_ip_ranges.py
docs/: architecture.md  brain.md  data-model.md  endpoints.md  requirements.md  roadmap.md  vision.md
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.jsx
frontend/src/components/: Badge.jsx  DataTable.jsx  Layout.jsx  Modal.jsx  StatsCard.jsx
frontend/src/pages/: Dashboard.jsx  DeviceDetail.jsx  Devices.jsx  LiveView.jsx  Settings.jsx  SubnetDetail.jsx  Subnets.jsx
