[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "scapy>=2.7.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
    "dnspython>=2.6.1",
]
